--- a/styles/home.css
+++ b/styles/home.css
@@ -26,6 +26,15 @@ header {
     background-color: #0c5475;
     border-radius: 3em;
 }
+nav {
+    background-color: #0c5475;
+    color: #ffffff;
+    line-height: auto;
+    text-align: left;
+    font-size: 2em;
+    font-family: "Noto Sans";
+    text-shadow: 0 .5rem .8rem rgba(0, 0, 0, 0.5);
+}
 
 ul {
     list-style-type: disc;
