--- a/styles/home.css
+++ b/styles/home.css
@@ -19,24 +19,66 @@ body {
 
 header {
     padding: 1em;
-    height: auto;
-    width: fit-content-inline;    
     text-align: left;
     color: #ffffff;
     background-color: #0c5475;
     border-radius: 3em;
 }
 nav {
+
     background-color: #0c5475;
     color: #ffffff;
-    line-height: auto;
     text-align: left;
     font-size: 2em;
     font-family: "Noto Sans";
+    text-shadow: 0 .5rem .8rem rgba(0, 0, 0, 0.5);
+    display: flex;
+}
+
+
+nav a img {
+    width: 300px;
+    height: 348px;
+    border:2px solid rgb(7, 7, 7);
+    background: url(https://twmanningiii.github.io/wdd230/images/tom.jpg) no-repeat;
+    box-shadow: 10px 10px 5px rgb(7, 7, 7);
+    border-radius:25px;   
+    margin: 10px;    
+}
+
+nav a {
+    color: #ffffff;
+    text-align: center;
+    font-size: 2em;
+    min-width: 200px;
+    padding: 1em;
+    min-width: auto;
+    text-decoration: none;
+    padding: 10px;
+   
+}
+
+h1 {
     text-shadow: 0 .5rem .8rem rgba(0, 0, 0, 0.5);
 }
 
 ul {
     list-style-type: disc;
-   text-align: left;
+    text-align: left;
+}
+
+footer  {
+    display:inline-block;
+    padding: 1em;
+    text-align: left;
+    color: #ffffff;
+    background-color: #0c5475;
+    border-radius: 3em;
+    padding: 1em;
+
+}
+
+#currentdate {
+    color: #ffffff;
+    display: inline;
 }
